Finished every routes and minor bug fixes